added list of experieinces

--- a/listOfExperiencesShort.tex
+++ b/listOfExperiencesShort.tex
@@ -3,7 +3,6 @@
     \item Working on locality-aware loop scheduling strategies, and generally user-defined loop schedules, in the context of MPI+OpenMP applications
     \item Developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
      \item   Serving as Program Manager for DoE Exascale Computing Project’s project SOLLVE and asBrookhaven National Laboratory’s representative in the OpenMP Architecture Review Board.
-
 \end{itemize}
 
 \dates{Jun. '18 - Apr. '19}
@@ -14,13 +13,10 @@
 %\begin{position}
 \vspace{0.0in}
 \begin{itemize}
-\item Collaborated with LLNL (Harshitha Menon) on an LDRD-type proposal for a synergistic loop scheduling and load balancing strategy. 
-\item Worked on making User-defined Loop Scheduling portable across different parallel programming library, done with ORNL (Oscar Hernandez) through DoE Exascale Computing Program.
-\item Added examples of loop scheduling in OpenMP in Examples section of OpenMP Specification.
-\item Worked on a NSF startup SBIR proposal for loop scheduling for desktop computers. 
-\item Collaborated on developing a proposal to add an OpenMP User-defined Schedule to the OpenMP specification based on an OpenMPCon 2017 paper, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto.
-\item Currently working on two papers for User-defined Loop Scheduling for publication.
-\item Assisted with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++.
+\item Worked on a performance optimization strategies that synergize loop scheduling done within-node with  load balancing done across-node. 
+\item Involved in contributing sections on loop scheduling in the OpenMP Specification (specification at openmp.org).
+\item Worked on a startup proposal for loop scheduling for applications for desktop computers (as opposed to HPC Applications) 
+%\item Assisting with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++.
 \item Integrated a shared memory library for sophisticated loop scheduling strategies, including some based on my dissertation, into the current version of Charm++.
 %item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
 \end{itemize}
@@ -29,17 +25,12 @@
 \textbf{University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
 \vspace*{-0.0in} 
 \begin{itemize}
-\item Worked with postdoc from LLNL on a proposal to study
-techniques that combine loop scheduling and load balancing to improve
+\item Worked with postdoc from LLNL on a proposal to study techniques that combine loop scheduling and load balancing to improve
 performance of scientific applications.
 \item Worked with OpenMP Language Committee to support user-defined loop schedules in OpenMP.
-\item Translated an x-ray tomography code written in
-Matlab code to C code and then parallelizing it to run on a supercomputer
-having nodes with GPGPUs. 
-\item Worked on modifications to LLVM compiler to support new
-OpenMP loop schedules. 
-\item Worked on ensuring external network infrastructure to support transfer of application code's input data files were adequate
-for an application code's efficient execution using the Globus Toolkit.
+\item Translated an x-ray tomography code written in Matlab code to C code and then parallelizing it to run on a supercomputer having nodes with GPGPUs. 
+\item Worked on modifications to LLVM compiler to support new OpenMP loop schedules. 
+% \item Worked on ensuring external network infrastructure to support transfer of application code's input data files were adequate for an application code's efficient execution using the Globus Toolkit.
 %\item \small Managing a git repository for a team working on
 %performance optimizations of the application program.
 \item Worked in team to manage computational performance aspects of running an application program involving Fast Fourier Transformation and image reconstruction algorithms. 
@@ -79,38 +70,4 @@ strategies.
 techniques and runtime.
 \item Assessed further opportunities for performance improvement of low-overhead schedulers, including improvement of spatial locality
 of low-overhead schedulers.
-\end{itemize}
-
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun. '11 - Sep. '11}
-\vspace*{-0.0in}
-\begin{itemize} 
-\item Experimented with different OpenMP parameters of implemented MPI+OpenMP application code to understand performance optimizations on
-LLNL supercomputers.
-\item Developed software design for low-overhead loop scheduling library based on libgomp software design.
-\end{itemize} 
-
-\textbf{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug. '10 - Sep. '10}
-\begin{itemize}
-\item Analyzed results for the performance tests developed on NERSC machines.
-\item Compared with collectives in reference to MPI (mpich2) runtime system.
-\end{itemize}
-
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May. '10 - Aug. '10}
-\begin{itemize}
-\item Modified libgomp runtime system in order to integrate low-overhead schedulers within it.
-\item Developed an algorithm multi-stage low-overhead loop scheduler with each stage associated with a level in the memory hierarchy, allowing for MPI-shared memory extensions to be used in conjunction with the low-overhead loop scheduling strategies.
-\end{itemize}
-{Goldman-Sachs$\>\>\>\>$Summer Analyst$\>\>\>\>$Jun. ‘09 – Sep. ‘09}
-\vspace*{-0.0in}
-\begin{itemize}
-\item Wrote code for testing trading system infrastructure functions under extreme market conditions.
-\item Analyzed performance bottlenecks of system infrastructure functions.
-\end{itemize}
-
-\textbf{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. ‘07 – Apr. ‘08}
-\vspace*{-0.0in}
-\begin{itemize} 
-\item Primarily responsible for developing, testing and documenting a service-oriented software application for health and status monitoring  of large-scale parallel and distributed networked systems.
-\item Developed company standards for software development (System Requirements Specifications, Design Documentation).
-\item Designed and implemented algorithms for cost optimization applications. Used dynamic programming, discrete optimization heuristics, and APIs.
 \end{itemize}
