--- a/listOfSkillSetsForResume.tex
+++ b/listOfSkillSetsForResume.tex
@@ -1,11 +1,8 @@
-{{\bf Languages}: C, C++, python, Fortran, bash, csh, VHDL, Matlab,
-Java}; {{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn, git,
-Globus Toolkit}; {{\bf Libraries for Parallelism}: POSIX threads
-(Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)}; {{\bf
-Performance Profiling Tools}: OpenSpeedShop, hpcToolkit, PMPI, Intel
-VTune}; {{\bf Platforms}: {Intel Xeon, IBM Power7, AMD Opteron, NVIDIA
-Keplar, Intel Xeon Phi}}
-
+{{\bf Languages}: C, C++, python, Fortran, bash, csh, VHDL, Matlab, Java}\\
+{{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn, git, Globus Toolkit}\\
+{{\bf Libraries for Parallelism}: POSIX threads (Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)}; \\
+{{\bf Performance Profiling Tools}: OpenSpeedShop, hpcToolkit, PMPI, Intel VTune}; \\
+{{\bf Platforms}: {Intel Xeon, IBM Power7, AMD Opteron, NVIDIA Keplar, Intel Xeon Phi}}
 \comments{
 \begin{itemize} 
 \item[] \small Intel Xeon, IBM Power7, AMD Opteron, NVIDIA Keplar, Intel Xeon Phi
