--- a/resume.tex
+++ b/resume.tex
@@ -1,40 +1,39 @@
 \thispagestyle{empty} % this page does not have a header
 
 %\newcommand{comments}{1}{[]}
-\newcommand{\comments}[1]{}  
+\newcommand{\comments}[1]{}
 
 %\documentclass[serif, mathserif, final]{beamer}
-\documentclass[]{res} 
+\documentclass[9pt]{res} 
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{xcolor}
 \begin{document} 
 
-\name{Vivek Kale}
+\name{Vivek L. Kale}
 %\address{1401 South State Street\\
 %Chicago, IL 60605 \\ 217-369 - 7996}
-
 %\phone{217-369-7996}
 %\email{vivek.lkale@gmail.com}
 %\web{http://vivek112.googlepages.com}
 %\citizenship{U.S. Citizen}
-
 \begin{resume}
-\vspace{0.1in}
-
+\vspace{-0.1in}
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 \begin{center}
-\textit{\bf P}: 217-369-7996. \textit{\bf E}: vivek.lkale@gmail.com. \textit{\bf W}: http://vlkale.com. U.S. Citizen
+\textit{\bf P}: +01 217-369-7996. \textit{\bf E}: vivek.lkale@gmail.com. \textit{\bf W}: http://vlkale.github.io. \\ U.S. Citizen
 \end{center}
 %\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
 \begin{center}
-\moveleft.5\sectionwidth\centerline{{\it Objective}: Position as software engineer specializing in performance engineering.}
+\moveleft.5\sectionwidth\centerline{{\it \small Objective}: \small Obtain position as software engineer specializing in performance engineering.}
 \end{center}
+\vspace{-0.5in}
+\small 
 \section{Education}
 \vspace{0.1in}
-    B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
-    Ph.D., Computer Science, 2015,  University of Illinois at Urbana-Champaign, {\it Advisor}: William D. Gropp
+    \small B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
+    \small Ph.D., Computer Science, 2015,  University of Illinois at Urbana-Champaign, {\it Advisor}: William D. Gropp
 \section{Awards}
 \vspace{0.1in}
 \input{listOfAwards} 
@@ -45,7 +44,7 @@
  
 \section{Experience}
 \vspace{0.1in} 
-\input{listOfExperiences} 
+\input{listOfExperiencesShort} 
 
 %\section{Research Overview} 
 %I have worked on low-overhead dynamic scheduling strategies for
@@ -62,7 +61,7 @@
 \vspace{0.1in}
 
 \section{Publications}
-\input{listOfPubs} 
+\input{listOfPubsShort} 
 
 \end{resume}
 \end{document}
