Updating list of experiences with latest from last 6 months

--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,9 +1,13 @@
 \textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$May 2019 - present}}
 \begin{itemize}
-    \item Working on locality-aware loop scheduling strategies, and generally user-defined loop schedules, in the context of MPI+OpenMP applications
-    \item Developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
-     \item   Serving as Program Manager for DoE Exascale Computing Project’s project SOLLVE and asBrookhaven National Laboratory’s representative in the OpenMP Architecture Review Board.
-
+\item Broadly, developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
+   \item Helping develop an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
+   \item Working on OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
+      \item Working on tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
+   \item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
+   \item Contributing to development of benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, PGI's OpenMP, on Exascale Supercomputers.
+   \item Leading hackathons (some virtual) for using OpenMP on DoE's Exascale Supercomputers. 
+   \item Serving as Project Manager for DoE Exascale Computing Project’s SOLLVE project and as Brookhaven National Laboratory’s representative in the OpenMP Architecture Review Board. 
 \end{itemize}
 
 \dates{Jun. '18 - Apr. '19}
