--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,13 +1,14 @@
 \textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$May 2019 - present}}
 \begin{itemize}
 \item Broadly, developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
-   \item Helping develop an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
-   \item Working on OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
-      \item Working on tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
+   \item Contributing to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
+   \item Designing and implementing OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
+      \item Developing tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
    \item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
-   \item Contributing to development of benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, PGI's OpenMP, on Exascale Supercomputers.
-   \item Leading hackathons (some virtual) for using OpenMP on DoE's Exascale Supercomputers. 
-   \item Serving as Project Manager for DoE Exascale Computing Project’s SOLLVE project and as Brookhaven National Laboratory’s representative in the OpenMP Architecture Review Board. 
+   \item Developing benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, PGI's OpenMP, on Exascale Supercomputers.
+   \item Leading hackathons (some virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
+   \item Serving as Technical Project Manager for DoE Exascale Computing Project’s SOLLVE project.
+   \item Representating Brookhaven National Laboratory the OpenMP Architecture Review Board. 
 \end{itemize}
 
 \dates{Jun. '18 - Apr. '19}
@@ -18,12 +19,12 @@
 %\begin{position}
 \vspace{0.0in}
 \begin{itemize}
-\item Collaborated with LLNL (Harshitha Menon) on an LDRD-type proposal for a synergistic loop scheduling and load balancing strategy. 
-\item Worked on making User-defined Loop Scheduling portable across different parallel programming library, done with ORNL (Oscar Hernandez) through DoE Exascale Computing Program.
-\item Added examples of loop scheduling in OpenMP in Examples section of OpenMP Specification.
+\item Collaborated with Lawrence Livermore National Lab on a proposal for a synergistic loop scheduling and load balancing strategy. 
+\item Worked on making User-defined Loop Scheduling portable across different parallel programming library, done with Oak Ridge National Lab through DoE Exascale Computing Program. 
+\item Added examples of loop scheduling in OpenMP in the Examples section of OpenMP Specification.
 \item Worked on a NSF startup SBIR proposal for loop scheduling for desktop computers. 
 \item Collaborated on developing a proposal to add an OpenMP User-defined Schedule to the OpenMP specification based on an OpenMPCon 2017 paper, presenting a proposal at the OpenMP F2F in Santa Clara and the upcoming F2F in Toronto.
-\item Currently working on two papers for User-defined Loop Scheduling for publication.
+\item Worked on papers for User-defined Loop Scheduling for publication.
 \item Assisted with slides for pitch and marketing of Charm++ software, and providing feedback for tutorials on Charm++.
 \item Integrated a shared memory library for sophisticated loop scheduling strategies, including some based on my dissertation, into the current version of Charm++.
 %item Comparing performance of a loop scheduling strategy available in the integrated shared memory library with the performance of the corresponding loop scheduling strategy available in LLVM’s OpenMP library.
@@ -40,12 +41,9 @@ performance of scientific applications.
 \item Translated an x-ray tomography code written in
 Matlab code to C code and then parallelizing it to run on a supercomputer
 having nodes with GPGPUs. 
-\item Worked on modifications to LLVM compiler to support new
-OpenMP loop schedules. 
-\item Worked on ensuring external network infrastructure to support transfer of application code's input data files were adequate
-for an application code's efficient execution using the Globus Toolkit.
-%\item \small Managing a git repository for a team working on
-%performance optimizations of the application program.
+\item Made modifications to LLVM compiler to support new OpenMP loop schedules. 
+\item Ensured external network infrastructure to support transfer of application code's input data files were adequate
+for an application code's efficient execution using the Globus Toolkit. 
 \item Worked in team to manage computational performance aspects of running an application program involving Fast Fourier Transformation and image reconstruction algorithms. 
 %\item \small Doing optimizations for MPI+CUDA application code involving low-overhead loop scheduling and loop optimizations such as loop unrolling. 
 %\item \small Working on transformations in LLVM. 
