--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -8,7 +8,7 @@
    \item Developing benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, PGI's OpenMP, on Exascale Supercomputers.
    \item Leading hackathons (some virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
    \item Serving as Technical Project Manager for DoE Exascale Computing Project’s SOLLVE project.
-   \item Representating Brookhaven National Laboratory the OpenMP Architecture Review Board. 
+   \item Representing Brookhaven National Laboratory the OpenMP Architecture Review Board. 
 \end{itemize}
 
 \dates{Jun. '18 - Apr. '19}
