--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -5,7 +5,7 @@
    \item Designing and implementing OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
       \item Developing tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
    \item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
-   \item Developing benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, PGI's OpenMP, on Exascale Supercomputers.
+   \item Developing benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, NVIDIA's OpenMP, on Exascale Supercomputers.
    \item Leading hackathons (some virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
    \item Serving as Technical Project Manager for DoE Exascale Computing Project’s SOLLVE project.
    \item Representing Brookhaven National Laboratory the OpenMP Architecture Review Board. 
