--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -11,11 +11,11 @@
    \item Representing Brookhaven National Laboratory the OpenMP Architecture Review Board. 
 \end{itemize}
 
-\dates{Jun. '18 - Apr. '19}
+\dates{June 2018 - April 2019}
 \location{Champaign, Illinois}
 \title{Software Developer}
 \employer{Charmworks, Inc.} 
-\textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$Jun. '18 - Apr. '19}
+\textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$June 2018 - April 2019}
 %\begin{position}
 \vspace{0.0in}
 \begin{itemize}
@@ -31,7 +31,7 @@
 \end{itemize}
 %\end{position}
 
-\textbf{University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$Dec. '16 - Jun '18}
+\textbf{University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$December 2016 - June 2018}
 \vspace*{-0.0in} 
 \begin{itemize}
 \item Worked with postdoc from LLNL on a proposal to study
@@ -50,7 +50,7 @@ for an application code's efficient execution using the Globus Toolkit.
 \end{itemize}
 
 %TODO: adaptive VS hybrid VS ... 
-\textbf{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. '16 - Nov. '16}
+\textbf{Charmworks, Inc.$\>$$\>$$\>$$\>$Developer$\>$$\>$$\>$$\>$Jan. 2016 - Nov. 2016}
 \vspace*{-0.0in}
 \begin{itemize}
 \item Implemented mixed static/dynamic loop scheduling
@@ -62,7 +62,7 @@ strategies within Charm++'s thread scheduling library.
 \item Assisted with business aspects of a high-tech startup. 
 \end{itemize} 
 
-\textbf{ University of Illinois$\>$$\>$$\>$$\>$Postdoctoral Associate$\>$$\>$$\>$$\>$Jul. '15 – Dec. '15}
+\textbf{ University of Illinois$\>$$\>$$\>$$\>$Postdoctoral Associate$\>$$\>$$\>$$\>$Jul. 2015 – Dec. 2015}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Developed library that allows application programmers to use strategies from dissertation.
@@ -71,7 +71,7 @@ GPGPU processor and Intel Xeon Phi.
 \item Incorporated over-decomposition and locality-aware scheduling into strategies from dissertation.
 \end{itemize}
 
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Lawrence Scholar$\>$$\>$$\>$$\>$Feb. '12 – Jun. '14}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Lawrence Scholar$\>$$\>$$\>$$\>$Feb. 2012 – Jun. 2014}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Measured MPI communication delays for micro-benchmarks codes run on supercomputers and worked to find tools to measure dequeue overheads of OpenMP loop schedulers.
@@ -83,7 +83,7 @@ techniques and runtime.
 of low-overhead schedulers.
 \end{itemize}
 
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun. '11 - Sep. '11}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$Jun. 2011 - Sep. 2011}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Experimented with different OpenMP parameters of implemented MPI+OpenMP application code to understand performance optimizations on
@@ -91,13 +91,13 @@ LLNL supercomputers.
 \item Developed software design for low-overhead loop scheduling library based on libgomp software design.
 \end{itemize} 
 
-\textbf{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug. '10 - Sep. '10}
+\textbf{Lawrence Berkeley Nat’l Lab$\>$$\>$$\>$$\>$Summer Scholar$\>$$\>$$\>$$\>$Aug. 2010 - Sep. 2010}
 \begin{itemize}
 \item Analyzed results for the performance tests developed on NERSC machines.
 \item Compared with collectives in reference to MPI (mpich2) runtime system.
 \end{itemize}
 
-\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May. '10 - Aug. '10}
+\textbf{Lawrence Livermore Nat’l Lab$\>$$\>$$\>$$\>$Scholar$\>$$\>$$\>$$\>$May. 2010 - Aug. 2010}
 \begin{itemize}
 \item Modified libgomp runtime system in order to integrate low-overhead schedulers within it.
 \item Developed an algorithm multi-stage low-overhead loop scheduler with each stage associated with a level in the memory hierarchy, allowing for MPI-shared memory extensions to be used in conjunction with the low-overhead loop scheduling strategies.
@@ -109,7 +109,7 @@ LLNL supercomputers.
 \item Analyzed performance bottlenecks of system infrastructure functions.
 \end{itemize}
 
-\textbf{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. ‘07 – Apr. ‘08}
+\textbf{Proteus Technologies, LLC$\>\>\>\>$Software Developer$\>\>\>\>$Aug. 2007 – Apr. 2008}
 \vspace*{-0.0in}
 \begin{itemize} 
 \item Primarily responsible for developing, testing and documenting a service-oriented software application for health and status monitoring  of large-scale parallel and distributed networked systems.
