--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -14,6 +14,7 @@
 
 \underline{Papers}
 \begin{enumerate} 
+\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara Chapman and Oscar Hernandez. Toward Supporting MultiGPU targets via taskloop and User-defined Schedules. Proceedings of the 2020 International Workshop of OpenMP. September 23-25, 2020. Austin, USA. (virtual) 
 \item Jonas H Müller Korndörfer, Florina M. Ciorba, Akan Yilmaz, Christian Iwainsky, Johannes Doerfert, Hal Finkel, Vivek Kale, Michael Klemm. \textbf{\textit{A Runtime Approach for Dynamic Load Balancing of OpenMP Parallel Loops in LLVM}}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2019. Denver, Colorado, USA. 
 \item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas H. Muller Korndorfer, Florina M. Ciorba. \textbf{\textit{Toward a Standard Interface for User-Defined Scheduling in OpenMP}}. International Workshop on OpenMP. September 23, 2019. Auckland, New Zealand. 
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
