--- a/resume.tex
+++ b/resume.tex
@@ -41,6 +41,10 @@
 \section{Technical Skills} 
 \vspace{0.1in}
 \input{listOfSkillSetsForResume} 
+
+\section{Courses} 
+\vspace{0.1in}
+\input{listOfCoursesShort} 
  
 \section{Experience}
 \vspace{0.1in} 
